--- a/index.html
+++ b/index.html
@@ -1,19 +1,3 @@
-<!-- 
-  Hello 😊.
-
-  This template is designed and developed by Nisar Hassan Naqvi
-  for anyone to use for free or customize the way they like.
-
-  Github Repo: https://github.com/nisarhassan12/portfolio-template/
-  My Website: https://nisar.dev
-
-  For business & inquires, contact me => syednisarhassan12@gmail.com
--->
-
-<!--
-  Follow the instructions written in comments to create your stunning portfolio
--->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -24,7 +8,7 @@
 
   <!-- Put your site title here -->
   <title>
-    Syed Ali Hussnain | A Web Developer based in Lahore, Pakistan.
+    ArtiSanal Solutions | A Agency that helps smaller businesses to GROW!!!.
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
@@ -34,6 +18,12 @@
 </head>
 
 <body>
+
+  <!-- Cursor -->
+
+  <div class="cursor-dot"></div>
+  <div class="cursor-outline"></div>
+
 
   <!-- ***** Header ***** -->
 
@@ -56,10 +46,10 @@
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>Syed Ali Hussnain</span>
+          <span>ArtiSanal Solutions</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A Web Developer based in Lahore, Pakistan.</p>
+        <p>A Agency that helps other businesses to GROW!!!!</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
