hero section with clients logo done

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
+  <link rel="shortcut icon" type="image/png" href="./images/artisanal.jpg" />
 
   <!-- Put your site title here -->
   <title>
@@ -50,7 +50,20 @@
         </h1>
         <!-- Put a small paragraph about yourself -->
         <p>A Agency that helps other businesses to GROW!!!!</p>
-        <a href="#contact" class="btn btn--pink">Get in touch</a>
+        <div id="hero-btn">
+          <a href="#contact" target="_blank" class="btn--icon btn--orange">
+          <div class="icon--container">
+            <img src="./images/caller.svg" class="icon" alt="caller-link">
+          </div>
+          30 Min Call
+        </a>
+        <a href="https:///wa.me/917078244548/" target="_blank" class="btn--icon btn--orange">
+          <div class="icon--container">
+            <img src="./images/whatsapp.svg" class="icon" alt="whatsapp-link">
+          </div>
+          WhatsApp
+        </a>
+        </div>
       </div>
     </div>
   </header>
@@ -159,12 +172,8 @@
         <h2>Clients</h2>
         <div class="client__logos">
           <!-- Add logos of the clients or companies you'have worked with. -->
-          <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
-          <img src="./images/goldengrid.png" class="client__logo" alt="Company 3" />
-          <img src="./images/bullseye.png" class="client__logo" alt="Company 1" />
-          <img src="./images/mighty-furnitures.png" class="client__logo" alt="Company 1" />
-          <img src="./images/fastlane.png" class="client__logo" alt="Company 3" />
-          <img src="./images/chippy.png" class="client__logo" alt="Company 1" />
+          <img src="./images/ez-credit-repair-logo.png" class="client__logo" alt="Company 2" />
+          <img src="./images/all-assignment-help-logo.png" class="client__logo" alt="Company 3" />
         </div>
       </div>
     </section>
@@ -173,7 +182,7 @@
 
     <section class="about" id="about">
       <div class="row">
-        <h2>About Me</h2>
+        <h2>About Us</h2>
         <div class="about__content">
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
