servicee page is added

--- a/index.html
+++ b/index.html
@@ -89,20 +89,20 @@
             <div class="services__box">
               <div class="services__icon">
                 <img
-                  src="./images/code-icon.svg"
+                  src="./images/web-programming.png"
                   alt="Custom Website Development"
                   class="services__code"
                 />
               </div>
               <h3>Custom-Crafted Websites</h3>
               <p>Tailored websites that meet your unique business needs.</p>
-              <a href="#contact" class="btn btn--yellow">Get A Free Quote</a>
+              <a href="#contact" class="btn btn--orange">Get A Free Quote</a>
             </div>
 
             <div class="services__box">
               <div class="services__icon">
                 <img
-                  src="./images/design-icon.svg"
+                  src="./images/ux-design.png"
                   alt="UI/UX Design"
                   class="services__code"
                 />
@@ -111,13 +111,13 @@
               <p>
                 Engaging and intuitive designs that enhance user experience.
               </p>
-              <a href="#contact" class="btn btn--yellow">Get A Free Quote</a>
+              <a href="#contact" class="btn btn--orange">Get A Free Quote</a>
             </div>
 
             <div class="services__box">
               <div class="services__icon">
                 <img
-                  src="./images/support-icon.svg"
+                  src="./images/online-chat.png"
                   alt="Client Support"
                   class="services__code"
                 />
@@ -126,12 +126,13 @@
               <p>
                 Ongoing care and maintenance to keep your website in top shape.
               </p>
-              <a href="#contact" class="btn btn--yellow">Get A Free Quote</a>
+              <a href="#contact" class="btn btn--orange">Get A Free Quote</a>
             </div>
           </div>
           <div class="services__cta">
-            <a href="#contact" class="btn btn--yellow btn--large">
-              📞 Let's Build Something Amazing
+            <a href="#contact" class="btn--icon btn--orange btn--large">
+              <span> Say Hii, Don't be shy! </span>
+              <img class="icon" src="/images/hand-wave.svg" alt="hand-wave" />
             </a>
           </div>
         </div>
@@ -194,7 +195,7 @@
           </div>
 
           <div class="portfolio__cta">
-            <button class="btn btn--yellow">Ask For More ↓</button>
+            <button class="btn btn--orange">Ask For More ↓</button>
           </div>
         </div>
       </section>
@@ -379,7 +380,7 @@
                 </p>
               </div>
 
-              <a href="#contact" class="btn btn--yellow">Get A Free Quote ↑</a>
+              <a href="#contact" class="btn btn--orange">Get A Free Quote ↑</a>
             </div>
 
             <div class="choose-us__image">
