why choose us is completed

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 
           <div class="choose-us__container">
             <div class="choose-us__content">
-              <div class="choose-us__item active">
+              <div class="choose-us__item">
                 <h3>Solutions That Align with Your Workflow</h3>
                 <p>
                   Transform cumbersome processes into sleek, interactive
@@ -362,30 +362,34 @@
                   regardless of complexity.
                 </p>
               </div>
-
-              <div class="choose-us__item">
-                <h3>Solutions That Meet Your Deadlines</h3>
-                <p>
-                  We understand the importance of timely delivery and ensure
-                  your project launches on schedule without compromising
-                  quality.
-                </p>
-              </div>
-
-              <div class="choose-us__item">
-                <h3>Solutions That Exceed Your Expectations</h3>
-                <p>
-                  We go beyond the basic requirements to deliver solutions that
-                  bring additional value to your business.
-                </p>
-              </div>
-
-              <a href="#contact" class="btn btn--orange">Get A Free Quote ↑</a>
             </div>
 
-            <div class="choose-us__image">
-              <img src="./images/workflow-laptop.png" alt="Workflow Diagram" />
+            <div class="choose-us__content">
+              <div class="choose-us__item">
+                <h3>Solutions That Align with Your Workflow</h3>
+                <p>
+                  Transform cumbersome processes into sleek, interactive
+                  applications that seamlessly integrate all your needs,
+                  regardless of complexity.
+                </p>
+              </div>
             </div>
+
+            <div class="choose-us__content">
+              <div class="choose-us__item">
+                <h3>Solutions That Align with Your Workflow</h3>
+                <p>
+                  Transform cumbersome processes into sleek, interactive
+                  applications that seamlessly integrate all your needs,
+                  regardless of complexity.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="choose-us-btn__container">
+            <a href="#contact" class="btn--icon btn--orange btn--large mt-16">
+              Give Us A Try
+            </a>
           </div>
         </div>
       </section>
@@ -415,6 +419,39 @@
                 src="./images/syed-ali-hussnain.jpg"
                 alt=""
               />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- ***** Portfolio Gallery ***** -->
+      <section class="portfolio-gallery" id="portfolio">
+        <div class="row">
+          <h2>Portfolio Gallery</h2>
+          <div class="portfolio__filters">
+            <button class="filter-btn active">Ecommerce</button>
+            <button class="filter-btn">Personal Branding</button>
+            <button class="filter-btn">Veterinary</button>
+            <button class="filter-btn">Educational</button>
+            <button class="filter-btn">Blockchain</button>
+            <button class="filter-btn">Miscellaneous</button>
+          </div>
+
+          <div class="portfolio__boxes">
+            <div class="portfolio__box">
+              <a href="https://luxandco.com.au/" target="_blank">
+                <img src="./images/luxandco.jpg" alt="Lux & Co" />
+              </a>
+            </div>
+            <div class="portfolio__box">
+              <a href="https://saltysweat.com/" target="_blank">
+                <img src="./images/saltysweat.jpg" alt="Salty Sweat" />
+              </a>
+            </div>
+            <div class="portfolio__box">
+              <a href="https://yesyoucandrinks.com/" target="_blank">
+                <img src="./images/yesyoucan.jpg" alt="Yes You Can Drinks" />
+              </a>
             </div>
           </div>
         </div>
