heading section of portfolio gallery is done

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <nav class="nav" role="navigation">
           <ul class="nav__items">
             <li class="nav__item">
-              <a href="#work" class="nav__link">Work</a>
+              <a href="#gallery" class="nav__link">Gallery</a>
             </li>
             <li class="nav__item">
               <a href="#clients" class="nav__link">Clients</a>
@@ -138,16 +138,14 @@
         </div>
       </section>
 
-      <!-- Portfolio Section -->
-      <section class="work" id="portfolio">
+      <!-- Portfolio Galley Section -->
+      <section class="work" id="gallery">
         <div class="row">
-          <h2>Portfolio</h2>
+          <h2>Projects Gallery</h2>
           <div class="portfolio__filters">
-            <button class="filter-btn active">Ecommerce</button>
-            <button class="filter-btn">Landing Pages</button>
-            <button class="filter-btn">Web Apps</button>
-            <button class="filter-btn">Branding</button>
-            <button class="filter-btn">Marketing</button>
+            <button class="filter-btn active">Web Applications</button>
+            <button class="filter-btn">AI Applications</button>
+            <button class="filter-btn">UI/UX</button>
           </div>
 
           <div class="work__boxes">
@@ -196,132 +194,6 @@
 
           <div class="portfolio__cta">
             <button class="btn btn--orange">Ask For More ↓</button>
-          </div>
-        </div>
-      </section>
-
-      <!-- ***** Work ***** -->
-
-      <section class="work" id="work">
-        <div class="row">
-          <h2>My Work</h2>
-          <div class="work__boxes">
-            <!-- Each div with the work__box class is a project. -->
-
-            <div class="work__box">
-              <div class="work__text">
-                <h3>Portfolio Template</h3>
-                <p>A free Open Source Portfolio for anyone to use for free.</p>
-                <ul class="work__list">
-                  <li>HTML</li>
-                  <li>SCSS</li>
-                  <li>JavaScript</li>
-                  <li>Parcel</li>
-                </ul>
-
-                <div class="work__links">
-                  <a
-                    href="https://nisar.surge.sh"
-                    target="_blank"
-                    class="link__text"
-                  >
-                    Visit Site <span>&rarr;</span>
-                  </a>
-                  <a
-                    href="https://github.com/nisarhassan12/portfolio"
-                    title="View Source Code"
-                    target="_blank"
-                  >
-                    <img
-                      src="./images/github.svg"
-                      class="work__code"
-                      alt="GitHub"
-                    />
-                  </a>
-                </div>
-              </div>
-              <div class="work__image-box">
-                <img
-                  src="./images/project-1.png"
-                  class="work__image"
-                  alt="Project 1"
-                />
-              </div>
-            </div>
-
-            <div class="work__box">
-              <div class="work__text">
-                <h3>Calculator</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                  eius.
-                </p>
-                <ul class="work__list">
-                  <li>React</li>
-                  <li>Next.js</li>
-                  <li>Node</li>
-                  <li>MongoDB</li>
-                </ul>
-
-                <div class="work__links">
-                  <a href="#" class="link__text">
-                    Visit Site <span>&rarr;</span>
-                  </a>
-                  <a href="#">
-                    <img
-                      src="./images/github.svg"
-                      class="work__code"
-                      title="View Source Code"
-                      alt="GitHub"
-                    />
-                  </a>
-                </div>
-              </div>
-              <div class="work__image-box">
-                <img
-                  src="./images/project-2.png"
-                  class="work__image"
-                  alt="Project 1"
-                />
-              </div>
-            </div>
-
-            <div class="work__box">
-              <div class="work__text">
-                <h3>Notificator</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                  eius.
-                </p>
-                <ul class="work__list">
-                  <li>React</li>
-                  <li>Next.js</li>
-                  <li>Node</li>
-                  <li>MongoDB</li>
-                </ul>
-
-                <div class="work__links">
-                  <a href="#" class="link__text">
-                    Visit Site <span>&rarr;</span>
-                  </a>
-                  <a href="#">
-                    <img
-                      src="./images/github.svg"
-                      class="work__code"
-                      title="View Source Code"
-                      alt="GitHub"
-                    />
-                  </a>
-                </div>
-              </div>
-              <div class="work__image-box">
-                <img
-                  src="./images/project-3.png"
-                  class="work__image"
-                  alt="Project 3"
-                />
-              </div>
-            </div>
           </div>
         </div>
       </section>
@@ -419,39 +291,6 @@
                 src="./images/syed-ali-hussnain.jpg"
                 alt=""
               />
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- ***** Portfolio Gallery ***** -->
-      <section class="portfolio-gallery" id="portfolio">
-        <div class="row">
-          <h2>Portfolio Gallery</h2>
-          <div class="portfolio__filters">
-            <button class="filter-btn active">Ecommerce</button>
-            <button class="filter-btn">Personal Branding</button>
-            <button class="filter-btn">Veterinary</button>
-            <button class="filter-btn">Educational</button>
-            <button class="filter-btn">Blockchain</button>
-            <button class="filter-btn">Miscellaneous</button>
-          </div>
-
-          <div class="portfolio__boxes">
-            <div class="portfolio__box">
-              <a href="https://luxandco.com.au/" target="_blank">
-                <img src="./images/luxandco.jpg" alt="Lux & Co" />
-              </a>
-            </div>
-            <div class="portfolio__box">
-              <a href="https://saltysweat.com/" target="_blank">
-                <img src="./images/saltysweat.jpg" alt="Salty Sweat" />
-              </a>
-            </div>
-            <div class="portfolio__box">
-              <a href="https://yesyoucandrinks.com/" target="_blank">
-                <img src="./images/yesyoucan.jpg" alt="Yes You Can Drinks" />
-              </a>
             </div>
           </div>
         </div>
