about us section is done

--- a/index.html
+++ b/index.html
@@ -55,25 +55,12 @@
           <!-- Put a small paragraph about yourself -->
           <p>A Agency that helps other businesses to GROW!!!!</p>
           <div id="hero-btn">
-            <a href="#contact" target="_blank" class="btn--icon btn--orange">
-              <div class="icon--container">
-                <img src="./images/caller.svg" class="icon" alt="caller-link" />
-              </div>
-              30 Min Call
-            </a>
             <a
               href="https:///wa.me/917078244548/"
               target="_blank"
-              class="btn--icon btn--orange"
+              class="btn btn--orange"
             >
-              <div class="icon--container">
-                <img
-                  src="./images/whatsapp.svg"
-                  class="icon"
-                  alt="whatsapp-link"
-                />
-              </div>
-              WhatsApp
+              Contact Us
             </a>
           </div>
         </div>
@@ -84,7 +71,7 @@
       <!-- Business Services Section -->
       <section class="section" id="services">
         <div class="row">
-          <h2>Your Business</h2>
+          <h2>Our Business</h2>
           <div class="services__boxes">
             <div class="services__box">
               <div class="services__icon">
@@ -148,53 +135,48 @@
             <button class="filter-btn">UI/UX</button>
           </div>
 
-          <div class="work__boxes">
-            <div class="work__box">
-              <div class="work__image-box">
+          <!-- <div class="portfolio__boxes">
+            <div class="portfolio__box">
+              <a href="https://luxandco.com.au/" target="_blank">
                 <img
-                  src="./images/luxandco.jpg"
-                  class="work__image"
-                  alt="Luxury Goods Website"
+                  src="https://via.placeholder.com/300x200?text=Lux+%26+Co"
+                  alt="Lux & Co"
                 />
-              </div>
-              <div class="work__text">
-                <h3>luxandcoaustralia.com.au</h3>
-                <p>Luxury goods e-commerce platform</p>
-              </div>
+                <div class="portfolio__text">
+                  <h3>Lux & Co</h3>
+                  <p>Gifting Luxury - Organic and Eco-Friendly Products</p>
+                </div>
+              </a>
             </div>
-
-            <div class="work__box">
-              <div class="work__image-box">
+            <div class="portfolio__box">
+              <a href="https://saltysweat.com/" target="_blank">
                 <img
-                  src="./images/saltysweat.jpg"
-                  class="work__image"
-                  alt="Fitness Website"
+                  src="https://via.placeholder.com/300x200?text=Salty+Sweat"
+                  alt="Salty Sweat"
                 />
-              </div>
-              <div class="work__text">
-                <h3>saltysweat.com</h3>
-                <p>Sports and fitness equipment store</p>
-              </div>
+                <div class="portfolio__text">
+                  <h3>Salty Sweat</h3>
+                  <p>Sports and Fitness Equipment Store</p>
+                </div>
+              </a>
             </div>
-
-            <div class="work__box">
-              <div class="work__image-box">
+            <div class="portfolio__box">
+              <a href="https://yesyoucandrinks.com/" target="_blank">
                 <img
-                  src="./images/yesyoucan.jpg"
-                  class="work__image"
-                  alt="Beverage Website"
+                  src="https://via.placeholder.com/300x200?text=Yes+You+Can+Drinks"
+                  alt="Yes You Can Drinks"
                 />
-              </div>
-              <div class="work__text">
-                <h3>yesyoucandrinks.com</h3>
-                <p>Non-alcoholic beverages e-commerce</p>
-              </div>
+                <div class="portfolio__text">
+                  <h3>Yes You Can Drinks</h3>
+                  <p>Non-Alcoholic Beverages E-commerce</p>
+                </div>
+              </a>
             </div>
-          </div>
+          </div> -->
 
-          <div class="portfolio__cta">
+          <!-- <div class="portfolio__cta">
             <button class="btn btn--orange">Ask For More ↓</button>
-          </div>
+          </div> -->
         </div>
       </section>
 
@@ -271,26 +253,42 @@
       <section class="about" id="about">
         <div class="row">
           <h2>About Us</h2>
+          <div class="about__team">
+            <div class="team-member">
+              <img
+                src="./images/nitin.png"
+                alt="Nitin - Full Stack Developer"
+              />
+              <h3>Nitin</h3>
+              <p>Full Stack Developer</p>
+            </div>
+            <div class="team-member">
+              <img
+                src="./images/shibtain.png"
+                alt="Shibtain - UI/UX Designer"
+              />
+              <h3>Shibtain</h3>
+              <p>UI/UX Designer</p>
+            </div>
+            <div class="team-member">
+              <img src="./images/asif.png" alt="Asif - Backend Developer" />
+              <h3>Asif</h3>
+              <p>Backend Developer</p>
+            </div>
+          </div>
           <div class="about__content">
             <div class="about__text">
-              <!-- Replace the below paragraph with info about yourself -->
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos id
-                nostrum illo harum blanditiis, tenetur eum suscipit cupiditate
-                in vel, ex quam quidem quos mollitia labore aut sunt eius
-                ratione molestiae fuga veniam facere similique voluptate.
+                Hii, We are ARTISANAL SOLUTION. We are a team of developers and
+                designers who are passionate about creating beautiful,
+                user-friendly websites and applications. We specialize in custom
+                website development, UI/UX design, and ongoing client support.
+                Our goal is to help businesses grow by providing them with the
+                tools they need to succeed online. We take pride in our work and
+                strive to deliver the best possible results for our clients. If
+                you're looking for a team that is dedicated to your success,
+                look no further than ArtiSanal Solutions.
               </p>
-              <!-- Provide a link to your resume -->
-              <a href="#" class="btn">My Resume</a>
-            </div>
-
-            <div class="about__photo-container">
-              <!-- Add a nice photo of yourself -->
-              <img
-                class="about__photo"
-                src="./images/syed-ali-hussnain.jpg"
-                alt=""
-              />
             </div>
           </div>
         </div>
