--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             me is via an email.
           </p>
           <!-- Replace the email with yours -->
-          <a href="mailto:you@example.com" class="btn">you@example.com</a>
+          <a href="mailto:nc1575612@gmail.com" class="btn">E-Mail Us</a>
         </div>
       </div>
     </section>
