footer section is done

--- a/index.html
+++ b/index.html
@@ -320,64 +320,16 @@
     <footer role="contentinfo" class="footer">
       <div class="footer__curve">
         <div class="row">
-          <div class="footer__content">
-            <div class="footer__section">
-              <h4>Our Offices</h4>
-              <ul>
-                <li>India: Mohali, PB</li>
-                <li>Canada: Vancouver, BC</li>
-                <li>Dubai: Disclosing Soon*</li>
-              </ul>
-            </div>
-
-            <div class="footer__section">
-              <h4>News Feed</h4>
-              <ul>
-                <li><a href="#">In the Media</a></li>
-                <li><a href="#">Blogs and News</a></li>
-                <li><a href="#">Vlogs & Reels</a></li>
-              </ul>
-            </div>
-
-            <div class="footer__section">
-              <h4>Legal Terms</h4>
-              <ul>
-                <li><a href="#">Terms & Conditions</a></li>
-                <li><a href="#">Copy Content Policy*</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-              </ul>
-            </div>
-
-            <div class="footer__section">
-              <h4>Useful Links</h4>
-              <ul>
-                <li><a href="#">Humans of ArtiSanal</a></li>
-                <li><a href="#">Join ArtiSanal as Intern</a></li>
-                <li><a href="#">Become a Part of Team</a></li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="footer__team">
-            <div class="team-member">
-              <img src="./images/team/member1.jpg" alt="Team Member" />
-              <span>John Doe</span>
-            </div>
-            <div class="team-member">
-              <img src="./images/team/member2.jpg" alt="Team Member" />
-              <span>Jane Smith</span>
-            </div>
-            <div class="team-member">
-              <img src="./images/team/member3.jpg" alt="Team Member" />
-              <span>Mike Johnson</span>
-            </div>
-          </div>
-
           <div class="footer__bottom">
             <p>&copy; 2024 ArtiSanal Solutions. All Rights Reserved</p>
-            <div class="footer__certificates">
-              <img src="./images/cert1.png" alt="Certification" />
-              <img src="./images/cert2.png" alt="Certification" />
+            <div id="hero-btn">
+              <a
+                href="https:///wa.me/917078244548/"
+                target="_blank"
+                class="btn btn--orange"
+              >
+                Contact Us
+              </a>
             </div>
           </div>
         </div>
